// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly: linux 1`] = `
<div>
  <SQScanner
    os="linux"
  />
  <ExecScanner
    host="host"
    os="linux"
    projectKey="projectKey"
    token="token"
  />
</div>
`;

exports[`renders correctly: macos 1`] = `
<div>
  <SQScanner
    os="mac"
  />
  <ExecScanner
    host="host"
    os="mac"
    projectKey="projectKey"
    token="token"
  />
</div>
`;

exports[`renders correctly: windows 1`] = `
<div>
  <SQScanner
    os="win"
  />
  <ExecScanner
    host="host"
    os="win"
    projectKey="projectKey"
    token="token"
  />
</div>
`;
